--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.152",
     "@types/typescript": "^0.4.29",
-    "serverless-offline": "^14.4.0"
+    "drizzle-kit": "^0.31.4",
+    "serverless-offline": "^14.4.0",
+    "tsx": "^4.20.3"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^1.0.1",
+    "drizzle-orm": "^0.44.4",
     "zod": "^4.0.5"
   }
 }
