--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.152",
     "@types/typescript": "^0.4.29",
+    "dotenv": "^17.2.1",
     "drizzle-kit": "^0.31.4",
+    "notenv": "^2.0.3",
     "serverless-offline": "^14.4.0",
     "tsx": "^4.20.3"
   },
