--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tsx": "^4.20.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.879.0",
     "@neondatabase/serverless": "^1.0.1",
     "bcryptjs": "^3.0.2",
     "drizzle-orm": "^0.44.4",
