--- a/serverless.yml
+++ b/serverless.yml
@@ -15,6 +15,7 @@ provider:
     DATABASE_URL: ${env:DATABASE_URL}
     JWT_SECRET: ${env:JWT_SECRET}
     BUCKET_NAME: !Ref UploadsBucket
+    MEALS_QUEUE_URL: !Ref MealsQueue
   iam:
     role:
       statements:
@@ -23,6 +24,9 @@ provider:
             - s3:PutObject
           # Resource: !GetAtt UploadsBucket.Arn
           Resource: !Sub "${UploadsBucket.Arn}/*"
+        - Effect: Allow
+          Action: sqs:SendMessage
+          Resource: !GetAtt MealsQueue.Arn
 
 package:
   individually: true
